--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <li>
                     <a href="#">
                         <span class="material-symbols-outlined">person</span>
-                        <span>login</span>
+                        <span>conta ideario</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">Item 3</a>
+                    <span class="search"><a href="#">Item 3</a></span>
                 </li>
             </ul>
         </menu>
