--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                     </a>
                 </li>
                 <li>
-                    <span class="search"><a href="#">Item 3</a></span>
+                     <a href="#">
+                         <span class="material-symbols-outlined">search</span>
+                         <span>pesquisar</span>
+                     </a>
                 </li>
             </ul>
         </menu>
