--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
             <ul>
                 <li>
                     <a href="#" onclick="clickMenu()">
-                        <i class="material-icons">menu</i>
+                         <i class="material-icons">menu</i>
                         <span>menu</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <span class="material-symbols-outlined">person</span>
-                        <span>conta ideario</span>
+                        <span>conta</span>
                     </a>
                 </li>
                 <li>
                      <a href="#">
-                         <span class="material-symbols-outlined">search</span>
-                         <span>pesquisar</span>
+                         <span class="material-symbols-outlined" id="search">search</span>
+                         <span id="search">buscar</span>
                      </a>
                 </li>
             </ul>
@@ -40,8 +40,46 @@
 
     <main>
         <article>
+
+            <div class="noticia-container">
+            <div class="categoria">'poema'</div>
+            <div class="imagem">
+                <a href="poemas/carta-para-guto.html"> <h1 class="titulo">Carta para: "Guto"</h1> </a>
+            <div class="subititulo">Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixa-lo por problemas financeiros.</div>
+            </div>
+            </div>
+
+            <div class="noticia-container">
+            <div class="categoria">'poema'</div>
+            <div class="imagem">
+                <a href="poemas/carta-para-guto.html"> <h1 class="titulo">Carta para: "Guto"</h1> </a>
+            <div class="subititulo">Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixa-lo por problemas financeiros.</div>
+            </div>
+            </div>
             
+            <div class="noticia-container">
+            <div class="categoria">'poema'</div>
+            <div class="imagem">
+                <a href="poemas/carta-para-guto.html"> <h1 class="titulo">Carta para: "Guto"</h1> </a>
+            <div class="subititulo">Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixa-lo por problemas financeiros.</div>
+            </div>
+            </div>
+
+            <div class="noticia-container">
+            <div class="categoria">'poema'</div>
+            <div class="imagem">
+                <a href="poemas/carta-para-guto.html"> <h1 class="titulo">Carta para: "Guto"</h1> </a>
+            <div class="subititulo">Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixa-lo por problemas financeiros.</div>
+            </div>
+            </div>
+
         </article>
+
+        <footer>
+            <h1>Ideario</h1>
+            <p>© Copyright 2024-2024 Ideario Comunicação e Participações S.A.</p>
+        </footer>
+
     </main>
 
 </body>
