--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 <div class="noticia-principal-2">
                 <div class="categoria">'poema'</div>
                 <div class="imagem">
-                <a href=" "><h1 class="titulo">Carta para: "Guto"</h1></a>
+                <a href=" "><h1 class="titulo">Aniversário</h1></a>
                 <div class="subititulo">
                     <ul>
-                        <li>Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixa-lo por problemas financeiros.</li>
+                        <li>Poema sobre um aniversário chato, que muitas pessoas que o personagem considerava importante nem lembraram.</li>
                     </ul>
                 </div>
                 </div>
