--- a/index.html
+++ b/index.html
@@ -72,6 +72,96 @@
                     </div>
                 </div>
 
+                                <div class="noticia-principal-1">
+                    <div class="categoria">poema</div>
+                    <div class="imagem">
+                        <a href="./poemas/carta-para-guto.html">
+                            <h2 class="titulo">Carta para: "Guto"</h2>
+                        </a>
+                        <div class="subititulo">
+                            <ul>
+                                <li>Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixá-lo por problemas financeiros.</li>
+                                <li>Considerado o poema de maior impacto do site, este artigo é o mais visitado pelos leitores e foi escolhido pelo autor como sua obra de maior valor emocional.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="noticia-principal-2">
+                    <div class="categoria">poema</div>
+                    <div class="imagem">
+                        <a href="./poemas/aniversario.html">
+                            <h2 class="titulo">Aniversário</h2>
+                        </a>
+                        <div class="subititulo">
+                            <ul>
+                                <li>Poema sobre um aniversário chato, que muitas pessoas que o personagem considerava importante nem lembraram.</li>
+                                <li>Um aniversário esquecido, o silêncio foi a sua única companhia.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                                <div class="noticia-principal-1">
+                    <div class="categoria">poema</div>
+                    <div class="imagem">
+                        <a href="./poemas/carta-para-guto.html">
+                            <h2 class="titulo">Carta para: "Guto"</h2>
+                        </a>
+                        <div class="subititulo">
+                            <ul>
+                                <li>Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixá-lo por problemas financeiros.</li>
+                                <li>Considerado o poema de maior impacto do site, este artigo é o mais visitado pelos leitores e foi escolhido pelo autor como sua obra de maior valor emocional.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="noticia-principal-2">
+                    <div class="categoria">poema</div>
+                    <div class="imagem">
+                        <a href="./poemas/aniversario.html">
+                            <h2 class="titulo">Aniversário</h2>
+                        </a>
+                        <div class="subititulo">
+                            <ul>
+                                <li>Poema sobre um aniversário chato, que muitas pessoas que o personagem considerava importante nem lembraram.</li>
+                                <li>Um aniversário esquecido, o silêncio foi a sua única companhia.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                                <div class="noticia-principal-1">
+                    <div class="categoria">poema</div>
+                    <div class="imagem">
+                        <a href="./poemas/carta-para-guto.html">
+                            <h2 class="titulo">Carta para: "Guto"</h2>
+                        </a>
+                        <div class="subititulo">
+                            <ul>
+                                <li>Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixá-lo por problemas financeiros.</li>
+                                <li>Considerado o poema de maior impacto do site, este artigo é o mais visitado pelos leitores e foi escolhido pelo autor como sua obra de maior valor emocional.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="noticia-principal-2">
+                    <div class="categoria">poema</div>
+                    <div class="imagem">
+                        <a href="./poemas/aniversario.html">
+                            <h2 class="titulo">Aniversário</h2>
+                        </a>
+                        <div class="subititulo">
+                            <ul>
+                                <li>Poema sobre um aniversário chato, que muitas pessoas que o personagem considerava importante nem lembraram.</li>
+                                <li>Um aniversário esquecido, o silêncio foi a sua única companhia.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <div class="em-alta">
