--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <div class="categoria">poema</div>
                     <div class="imagem">
                         <a href="poemas/carta-para-guto.html">
-                            <h2 class="titulo">"Carta para Guto": Sabe aquele animalzinho que sumiu, você teve que dar para adoção ou algo assim? Carta para Guto é como se fosse uma carta para um pequeno cachorrinho que teve que ser doado por alguns motivos...</h2>
+                            <h2 class="titulo">"Carta para Guto": Esse poema é como se fosse uma carta para um pequeno cachorrinho que teve que ser doado por alguns motivos...</h2>
                         </a>
                     </div>
                 </div>
