--- a/index.html
+++ b/index.html
@@ -164,6 +164,15 @@
 
             </div>
 
+                    <div class="noticia-imagem" style="background-image: url(media/bjork.jpg);">
+                    <a href="poemas/carta-para-guto.html">
+                        <h2 class="titulo">Carta para: "Guto".</h2>
+                    </a>
+                    <div class="subititulo">
+                        Reflexão poética sobre a infância, a imaginação e as estrelas que guardamos dentro de nós.
+                    </div>
+                </div>
+
             <div class="em-alta">
                 <h1>Artigos em alta 🔥</h1>
 
