--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/media-query.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <script src="scripts/java.js" defer></script>
+    <script src="scripts/java.js"></script>
 </head>
 <body>
 
@@ -20,7 +20,7 @@
                     <a href="#" onclick="clickMenu()">
                         <i class="material-icons">menu</i>
                         <span>menu</span>
-                    </a>
+                 </a>
                 </li>
                 <li>
                     <a href="#">
@@ -72,7 +72,7 @@
                     </div>
                 </div>
 
-                                <div class="noticia-principal-1">
+                    <div class="noticia-principal-1">
                     <div class="categoria">poema</div>
                     <div class="imagem">
                         <a href="./poemas/carta-para-guto.html">
@@ -132,7 +132,7 @@
                     </div>
                 </div>
 
-                                <div class="noticia-principal-1">
+                    <div class="noticia-principal-1">
                     <div class="categoria">poema</div>
                     <div class="imagem">
                         <a href="./poemas/carta-para-guto.html">
@@ -208,7 +208,7 @@
                     <div class="categoria">poema</div>
                     <div class="imagem">
                         <a href="poemas/carta-para-guto.html">
-                            <h2 class="titulo">"Carta para Guto": Esse poema é como se fosse uma carta para um pequeno cachorrinho que teve que ser doado por alguns motivos...</h2>
+                            <h2 class="titulo">"Carta para Guto": Esse poema é como se fosse uma carta para um pequeno <br> cachorrinho que teve que ser doado por alguns motivos...</h2>
                         </a>
                     </div>
                 </div>
