--- a/poemas/carta-para-guto.html
+++ b/poemas/carta-para-guto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ideario</title>
-    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="../estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/media-query.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -12,10 +12,97 @@
 </head>
 <body>
 
-        <menu-ideario></menu-ideario>
+            <header>
+        <h1><a href="../index.html">Ideario</a></h1>
+        <menu>
+            <ul>
+                <li>
+                    <a href="#" onclick="clickMenu()">
+                        <i class="material-icons">menu</i>
+                        <span>menu</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="material-symbols-outlined">search</span>
+                        <span>buscar</span>
+                    </a>
+                </li>
+                                <li>
+                    <a href="#">
+                        <span class="material-symbols-outlined">person</span>
+                        <span>conta</span>
+                    </a>
+                </li>
+            </ul>
+        </menu>
+    </header>
 
 <main>
     <article>
+        <h1>Carta para: Guto</h1>
+    <small>
+    <section class="autor-data">  Por <strong>Leonardo da Cunha</strong> <br>
+    <small>20/11/2024 08h19</small> <br>
+    </section>
 
+        <img src="../media/conto-para-guto.jpeg" alt="" style="border-radius: 15px;">
+
+            <p>Quando meu tio chegou com aquela miniatura de <i>"cachôro"</i>, <br>
+            Meus olhos encheram de "água de choro" <br>
+            Por causa dessa sensação, <br>
+            De ter conhecido meu primeiro melhor amigo, <br>
+            Aquela maravilhosa emoção... <br>
+            Guto, para todo o sempre vou te amar. <br>
+            Me pedoe por te deixar.</p>  
+
+            <p>Meu amigo Guto, Jamais esquecerei de você! <br>
+            De quando acordavamos cedo para brincar em nosso quintal <br>
+            Ou das vezes de quando você quase partiu desse plano astral. <br>
+            Maldito seja o ser que te envenenou, <br>
+            E bendido seja o ser que te ajudou! <br>
+            Quando minha mãe conversou comigo sobre te doar para uma amiga dela, me senti muito mal. <br>
+            Por conta de condições financeiras tive que me despedir eternamente de você. <br> </p>
+
+            <p>Perdemos o contato com essa amiga. <br>
+            E logo mais tarde, ela se tornou minha pior inimiga. <br>
+            Espero que ela tenha cuidado muito bem de você, <br>
+            Meu bebê. <br></p>
+
+            <p> Atualmente você não deve estar entre nós. <br>
+            E sim em uma salinha asós, <br>
+            Com aquele gato do vizinho que vivia de arranhando, <br>
+            E quando você se machucava, eu ficava te afagando. <br></p>
+
+            <p>Tenho certeza que nunca ninguém te amou como eu te amei. <br>
+            Me perdoe por todas vezes que eu pisei em sua patinha sem querer, eu era só um bebê, <br>
+            Me perdoe também de quando eu te abandonei, <br>
+            Eu sempre vou te amar, meu <i>"nenê"</i>. <br></p>
+
+            <p>
+            Guto, <br>
+            Você se foi como um vulto. <br>
+            De: quem vive com culpa e ternura no peito, <br>
+            Para: quem encontrou no silêncio o leito. <br>
+            Que as estrelas te façam carinho e abrigo, <br>
+            Pois neste mundo, você foi mais que um amigo. <br>
+            </p>
+
+            <hr>
+                
+                <section class="comentarios">
+                    <h2>Comentários (0)</h2>
+                    <p>Os comentários são de responsabilidade exclusiva de seus autores e não representam a opinião deste site. <br> Se achar algo que viole os <a href="">termos de uso</a>, denuncie. Leia as perguntas mais frequentes para saber <br> o que é impróprio ou ilegal.</p>
+
+                    <input type="text" name="" id="" required placeholder="O que você está pensando?">
+                </section>
     </article>
 </main>
+
+    <footer>
+        <h1>Ideario</h1>
+        <p>© Copyright 2024-2024 Ideario Comunicação e Participações S.A.</p>
+    </footer>
+
+</body>
+</html>
