--- a/poemas/carta-para-guto.html
+++ b/poemas/carta-para-guto.html
@@ -42,7 +42,7 @@
     <article>
         <h1>Carta para: Guto</h1>
     <small>
-    <section class="autor-data">  Por <strong>Leonardo da Cunha</strong> <br>
+    <section class="autor-data">  Por <strong>Leonardo da Cunha</strong> —
     <small>20/11/2024 08h19</small> <br>
     </section>
 
