--- a/poemas/carta-para-guto.html
+++ b/poemas/carta-para-guto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ideario</title>
     <link rel="stylesheet" href="../estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="../estilos/media-query.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="scripts/java.js"></script>
@@ -88,14 +88,16 @@
             Pois neste mundo, você foi mais que um amigo. <br>
             </p>
 
+        <section class="comentarios">
+
             <hr>
-                
-                <section class="comentarios">
+        
                     <h2>Comentários (0)</h2>
-                    <p>Os comentários são de responsabilidade exclusiva de seus autores e não representam a opinião deste site. <br> Se achar algo que viole os <a href="">termos de uso</a>, denuncie. Leia as perguntas mais frequentes para saber <br> o que é impróprio ou ilegal.</p>
+                    <p>Os comentários são de responsabilidade exclusiva de seus autores e não representam a opinião deste site. Se achar algo <br> que viole os <a href="">termos de uso</a>, denuncie. Leia as perguntas mais frequentes para saber o que é impróprio ou ilegal.</p>
 
                     <input type="text" name="" id="" required placeholder="O que você está pensando?">
-                </section>
+
+        </section>
     </article>
 </main>
 
