--- a/poemas/carta-para-guto.html
+++ b/poemas/carta-para-guto.html
@@ -95,8 +95,10 @@
                     <h2>Comentários (0)</h2>
                     <p>Os comentários são de responsabilidade exclusiva de seus autores e não representam a opinião deste site. Se achar algo <br> que viole os <a href="">termos de uso</a>, denuncie. Leia as perguntas mais frequentes para saber o que é impróprio ou ilegal.</p>
 
-                    <input type="text" name="" id="" required placeholder="O que você está pensando?">
-
+            <div class="comentario-container">
+                    <textarea id="meutexto" required placeholder="O que você está pensando?"></textarea>
+            </div>
+                                <button type="submit">Publicar Comentário</button>
         </section>
     </article>
 </main>
