--- a/poemas/carta-para-guto.html
+++ b/poemas/carta-para-guto.html
@@ -98,7 +98,7 @@
             <div class="comentario-container">
                     <textarea id="meutexto" required placeholder="O que você está pensando?"></textarea>
             </div>
-                                <button type="submit">Publicar Comentário</button>
+                                <button type="submit">Enviar</button>
         </section>
     </article>
 </main>
