--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                                 <li>
-                    <a href="#">
+                    <a href="login.html">
                         <span class="material-symbols-outlined">person</span>
                         <span>conta</span>
                     </a>
