--- a/poemas/carta-para-guto.html
+++ b/poemas/carta-para-guto.html
@@ -102,6 +102,20 @@
 
             <hr>
 
+                <div class="comentario">
+                <p>
+                    <strong>NOME</strong> há TEMPO <br>
+                    COMENTÁRIO <br>
+                    <i class="material-icons">favorite</i> curtir - 
+                    <i class="material-icons">reply</i> responder - 
+                    <i class="material-icons">report</i> denunciar <br>
+
+                    0 respostas
+                </p>
+
+
+                </div>
+                 
             <br><br><br>
 
         </section>
