--- a/crie-uma-conta.html
+++ b/crie-uma-conta.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-                <header>
+        <header>
         <h1><a href="../index.html">Ideario</a></h1>
         <menu>
             <ul>
@@ -39,11 +39,17 @@
         </menu>
     </header>
 
+    Sobrenome
+    Apelido
+    Nascimento
+    Sexo
+    País
+
             <main>
                 <article>
                     <section class="login">
-                        <h1>Login</h1>
-                        <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                        <h1>Criar uma conta</h1>
+                        <p>Seja bem-vindo(a) ao Ideario. Crie para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                         <form action="login.php" method="post">
                         <div class="campo">
                         <i class="material-icons" for="ilogin">person</i>
