--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 <body>
 
                 <header>
-        <h1><a href="../index.html">Ideario</a></h1>
+        <h1><a href="index.html">Ideario</a></h1>
         <menu>
             <ul>
                 <li>
