--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
 
             </div>
 
-                    <div class="noticia-imagem" style="background-image: url(media/bjork.jpg);">
+            <!--
+            <div class="noticia-imagem" style="background-image: url(media/bjork.jpg);">
                     <a href="poemas/carta-para-guto.html">
                         <h2 class="titulo">Carta para: "Guto".</h2>
                     </a>
@@ -171,6 +172,7 @@
                         Reflexão poética sobre a infância, a imaginação e as estrelas que guardamos dentro de nós.
                     </div>
                 </div>
+            -->
 
             <div class="em-alta">
                 <h1>Artigos em alta 🔥</h1>
@@ -181,11 +183,8 @@
                     <div class="categoria">poema</div>
                     <div class="imagem">
                         <a href="poemas/carta-para-guto.html">
-                            <h2 class="titulo">Carta para: "Guto"</h2>
+                            <h2 class="titulo">"Carta para Guto": Esse poema é como se fosse uma carta para um pequeno <br> cachorrinho que teve que ser doado por alguns motivos...</h2>
                         </a>
-                        <div class="subititulo">
-                            Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixá-lo por problemas financeiros.
-                        </div>
                     </div>
                 </div>
 
@@ -195,11 +194,8 @@
                     <div class="categoria">poema</div>
                     <div class="imagem">
                         <a href="poemas/aniversario.html">
-                            <h2 class="titulo">Aniversário</h2>
+                            <h2 class="titulo">"Carta para Guto": Esse poema é como se fosse uma carta para um pequeno <br> cachorrinho que teve que ser doado por alguns motivos...</h2>
                         </a>
-                        <div class="subititulo">
-                            Poema sobre um aniversário solitário, onde as ausências falaram mais alto que os parabéns.
-                        </div>
                     </div>
                 </div>
 
@@ -214,15 +210,6 @@
                     </div>
                 </div>
             </div>
-
-                <div class="noticia-imagem">
-                    <a href="poemas/carta-para-guto.html">
-                        <h2 class="titulo">Carta para: "Guto".</h2>
-                    </a>
-                    <div class="subititulo">
-                        Reflexão poética sobre a infância, a imaginação e as estrelas que guardamos dentro de nós.
-                    </div>
-                </div>
         </article>
 
     <footer>
