--- a/poemas/carta-para-guto.html
+++ b/poemas/carta-para-guto.html
@@ -106,7 +106,7 @@
                 <p>
                     <strong>NOME</strong> há TEMPO <br>
                     COMENTÁRIO <br>
-                    <i class="material-icons">favorite</i> curtir - 
+                    <i class="material-icons">favorite</i> curtir (0) - 
                     <i class="material-icons">reply</i> responder - 
                     <i class="material-icons">report</i> denunciar <br>
 
