--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <div class="categoria">poema</div>
                     <div class="imagem">
                         <a href="poemas/carta-para-guto.html">
-                            <h2 class="titulo">"Carta para Guto": Esse poema é como se fosse uma carta para um pequeno <br> cachorrinho que teve que ser doado por alguns motivos...</h2>
+                            <h2 class="titulo">Por que dizer "Indío" se referindo a Indígena é errado? Saiba </h2>
                         </a>
                     </div>
                 </div>
