--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
                 <hr>
 
                 <div class="noticia-container">
-                    <div class="categoria">poema</div>
+                    <div class="categoria">artigo de opinião</div>
                     <div class="imagem">
                         <a href="poemas/carta-para-guto.html">
-                            <h2 class="titulo">Por que dizer "Indío" se referindo a Indígena é errado? Saiba </h2>
+                            <h2 class="titulo">Por que dizer "índio" se referindo a indígena é <br> errado? Saiba agora o porquê — e não cometa mais esse mesmo erro. </h2>
                         </a>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                     <div class="categoria">poema</div>
                     <div class="imagem">
                         <a href="poemas/carta-para-guto.html">
-                            <h2 class="titulo">"Carta para Guto": Esse poema é como se fosse uma carta para um pequeno <br> cachorrinho que teve que ser doado por alguns motivos...</h2>
+                            <h2 class="titulo">Você sabe a diferença dos <i>"porquês"</i>? Uma dúvida <br> comum, mas que faz toda a diferença na hora de escrever bem. </h2>
                         </a>
                     </div>
                 </div>
