--- a/crie-uma-conta.html
+++ b/crie-uma-conta.html
@@ -46,28 +46,44 @@
 
       <form action="login.php" method="post">
         <div class="campo">
+          <label for="inome"><i class="material-icons">person</i> Nome</label>
           <input name="nome" id="inome" placeholder="Seu nome" required maxlength="30">
-          <label for="inome">Nome</label>
         </div>
 
         <div class="campo">
+          <label for="iemail"><i class="material-icons">mail</i> E-mail</label>
           <input name="email" id="iemail" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
-          <label for="iemail">E-mail</label>
         </div>
 
         <div class="campo">
-          <input type="date" name="nascimento" id="idate" required>
-          <label for="idate">Data de Nascimento</label>
+          <label for="idate"><i class="material-icons">calendar_month</i> Data de Nascimento</label>
+          <input type="date" name="nascimento" id="idate" placeholder="Sua senha" required>
         </div>
 
         <div class="campo">
-          <input name="pais" id="ipais" placeholder="Seu país" required maxlength="30">
-          <label for="ipais">País</label>
+        <label for="ipais"><i class="material-icons">public</i> País</label>
+        <select name="pais" id="ipais" required>
+            <option value="" disabled selected>Selecione seu país</option>
+            
+            <optgroup label="América do Sul">
+            <option value="brasil">Brasil</option>
+            <option value="argentina">Argentina</option>
+            <option value="colombia">Colômbia</option>
+            <option value="chile">Chile</option>
+            </optgroup>
+
+            <optgroup label="Europa">
+            <option value="portugal">Portugal</option>
+            <option value="espanha">Espanha</option>
+            <option value="franca">França</option>
+            <option value="alemanha">Alemanha</option>
+            </optgroup>
+        </select>
         </div>
 
         <div class="campo">
+          <label for="isenha"><i class="material-icons">vpn_key</i> Senha</label>
           <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
-          <label for="isenha">Senha</label>
         </div>
 
         <input type="submit" value="Entrar">
