--- a/poemas/carta-para-guto.html
+++ b/poemas/carta-para-guto.html
@@ -42,8 +42,17 @@
     <article>
         <h1>Carta para: Guto</h1>
     <small>
-    <section class="autor-data">  Por <strong>Leonardo da Cunha</strong> —
-    <small>20/11/2024 08h19</small> <br>
+    <section class="autor-data">  Por <a href="">Leonardo da Cunha</a> —
+    <small>20/11/2024 08h19 • Última atualização </small> <br>
+    </section>
+
+    <section class="compartilhar">
+    <p>
+        <a href="#" title="Compartilhar no WhatsApp"><i class="material-icons">whatsapp</i></a>
+        <a href="#" title="Compartilhar no Facebook"><i class="material-icons">facebook</i></a>
+        <a href="#" title="Compartilhar no Twitter"><i class="material-icons">share</i></a>
+        <a href="#" title="Copiar link"><i class="material-icons">link</i></a>
+    </p>
     </section>
 
         <img src="../media/conto-para-guto.jpeg" alt="" style="border-radius: 15px;">
@@ -98,7 +107,7 @@
             <div class="comentario-container">
                     <textarea id="meutexto" required placeholder="O que você está pensando?"></textarea>
             </div>
-                                <button type="submit">Enviar</button>
+                <button type="submit">Enviar</button>
 
             <hr>
 
