--- a/login.html
+++ b/login.html
@@ -46,13 +46,13 @@
                         <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                         <form action="login.php" method="post">
                         <div class="campo">
-                        <label for="ilogin">Login <i class="material-icons" for="ilogin">person</i> </label>
+                        <label for="ilogin"><i class="material-icons" for="ilogin">person</i> Login ou e-mail</label>
                         <input name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
                         
                         </div>
                         </form>
                         <div class="campo">
-                        <label for="isenha">Senha <i class="material-icons">vpn_key</i></label>
+                        <label for="isenha"> <i class="material-icons">vpn_key</i> Senha</label>
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         </div>
                         
@@ -64,7 +64,6 @@
                             </a>
 
                             <br>
-
 
                             Não tem uma conta? <a href="crie-uma-conta.html">Crie agora!</a>
                         </p>
