--- a/poemas/leo.html
+++ b/poemas/leo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ideario</title>
     <link rel="stylesheet" href="../estilos/style.css" media="all">
+    <link rel="stylesheet" href="../estilos/leo.css">
     <link rel="stylesheet" href="../estilos/media-query.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -12,7 +13,7 @@
 </head>
 <body>
 
-    <header>
+            <header>
         <h1><a href="../index.html">Ideario</a></h1>
         <menu>
             <ul>
@@ -40,62 +41,18 @@
 
 <main>
     <article>
-        <h1>Carta para: Guto</h1>
-    <small>
-    <section class="autor-data">  Por <a href="leo.html">Leonardo da Cunha</a> —
-    <small>20/11/2024 08h19 • Última atualização </small> <br>
+    
+    <section class="perfil"> 
+        <h1>Leonardo</h1>
     </section>
 
-    <section class="compartilhar">
-    <p>
-        <a href="#" title="Compartilhar no WhatsApp"><i class="material-icons">whatsapp</i></a>
-        <a href="#" title="Compartilhar no Facebook"><i class="material-icons">facebook</i></a>
-        <a href="#" title="Compartilhar no Twitter"><i class="material-icons">share</i></a>
-        <a href="#" title="Copiar link"><i class="material-icons">link</i></a>
-    </p>
+    <section class="texto">
+        <p>
+            Olá Mundo! Eu me chamo Leonardo e sou o criador desse site! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur molestiae sunt culpa commodi cum! Mollitia, assumenda maiores? Nemo, et aut minus aliquid autem repellendus consectetur, corporis ipsa minima saepe possimus? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab alias debitis quisquam sed blanditiis iusto rerum perferendis ipsam aspernatur nesciunt? Dolor cupiditate repellendus dolorum impedit quibusdam molestias voluptate eum ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta dolore beatae eum, enim repellendus cum dignissimos, est illo exercitationem autem molestias eius dolorum! Sapiente qui esse, fugit tempore itaque enim?
+        </p>
     </section>
 
-        <img src="../media/conto-para-guto.jpeg" alt="" style="border-radius: 15px;">
-
-            <p>Quando meu tio chegou com aquela miniatura de <i>"cachôro"</i>, <br>
-            Meus olhos encheram de "água de choro" <br>
-            Por causa dessa sensação, <br>
-            De ter conhecido meu primeiro melhor amigo, <br>
-            Aquela maravilhosa emoção... <br>
-            Guto, para todo o sempre vou te amar. <br>
-            Me pedoe por te deixar.</p>  
-
-            <p>Meu amigo Guto, Jamais esquecerei de você! <br>
-            De quando acordavamos cedo para brincar em nosso quintal <br>
-            Ou das vezes de quando você quase partiu desse plano astral. <br>
-            Maldito seja o ser que te envenenou, <br>
-            E bendido seja o ser que te ajudou! <br>
-            Quando minha mãe conversou comigo sobre te doar para uma amiga dela, me senti muito mal. <br>
-            Por conta de condições financeiras tive que me despedir eternamente de você. <br> </p>
-
-            <p>Perdemos o contato com essa amiga. <br>
-            E logo mais tarde, ela se tornou minha pior inimiga. <br>
-            Espero que ela tenha cuidado muito bem de você, <br>
-            Meu bebê. <br></p>
-
-            <p> Atualmente você não deve estar entre nós. <br>
-            E sim em uma salinha asós, <br>
-            Com aquele gato do vizinho que vivia de arranhando, <br>
-            E quando você se machucava, eu ficava te afagando. <br></p>
-
-            <p>Tenho certeza que nunca ninguém te amou como eu te amei. <br>
-            Me perdoe por todas vezes que eu pisei em sua patinha sem querer, eu era só um bebê, <br>
-            Me perdoe também de quando eu te abandonei, <br>
-            Eu sempre vou te amar, meu <i>"nenê"</i>. <br></p>
-
-            <p>
-            Guto, <br>
-            Você se foi como um vulto. <br>
-            De: quem vive com culpa e ternura no peito, <br>
-            Para: quem encontrou no silêncio o leito. <br>
-            Que as estrelas te façam carinho e abrigo, <br>
-            Pois neste mundo, você foi mais que um amigo. <br>
-            </p>
+            
 
         <section class="comentarios">
 
