--- a/mistério/café-barcelo.html
+++ b/mistério/café-barcelo.html
@@ -4,11 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Café Barcello & Co.</title>
-
-  <!-- Fontes e ícones -->
   <link rel="stylesheet" href="../estilos/style.css" media="all">
   <link rel="stylesheet" href="../estilos/media-query.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
   <script src="scripts/java.js"></script>
   
@@ -26,13 +23,13 @@
     }
 
     .jornal {
-      font-family: 'EB Garamond', Georgia, 'Times New Roman', Times, serif;
+      font-family: Georgia;
       background: rgb(255, 243, 219);
       padding: 20px;
       max-width: 800px;
       margin: auto;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      color: #272727;
+      color: #000000;
     }
 
     .jornal p, 
@@ -40,7 +37,7 @@
     .jornal h2, 
     .jornal .subtitle, 
     .jornal .date {
-      font-family: 'EB Garamond', Georgia, 'Times New Roman', Times, serif;
+      font-family: Georgia;
     }
 
     article h1 {
@@ -49,9 +46,11 @@
       margin: 0px;
       font-variant: small-caps;
       text-align: center;
+      color: #131313;
     }
 
     .subtitle {
+      font-family: Georgia;
       font-size: 18px;
       font-weight: bold;
       text-align: center;
@@ -59,7 +58,7 @@
     }
 
     .per {
-      font-family: 'EB Garamond', Georgia, 'Times New Roman', Times, serif;
+      font-family: Georgia;
       font-size: 16px;
       margin: -5px;
       text-align: center;
@@ -94,7 +93,7 @@
     }
 
     i {
-      font-family: 'EB Garamond', Georgia, 'Times New Roman', Times, serif;
+      font-family: Georgia;
     }
   </style>
 </head>
@@ -145,17 +144,19 @@
           <h1>Capítulo 1: A Inauguração</h1>
           <div class="subtitle">21 de setembro, 1929</div>
 
-          <p>Depois de anos trabalhando duro, Alípio Barcello e sua esposa Olga fundam a cafeteria "Café Barcello & CO." para ter uma grana extra, para uma condição melhor de vida para o único filho do casal, Dante.</p>
+          <p>Depois de anos trabalhando duro, Alípio Barcello e sua esposa Olga fundam a cafeteria "Café Barcello & CO." para uma condição melhor de vida para o único filho do casal, Dante.</p>
 
           <p>ㅤ"Olivinha, <i>(nome que aqui significa o apelido de Olga)</i> estou muito contente por finalmente inaugurarmos nossa cafeteria!" Dizia Alípio com um sorriso de orelha á orelha. "Finalmente amor" dizia Olga com um semblante feliz. "Finalmente Esmeraldo vai ter uma qualidade de vida melhor!".</p>
 
           <p>ㅤ"Olga, você está maluca? Um negro trabalhando em uma cafeteria de luxo como a dos Barcello? Isso mancharia o nome da nossa empresa. Já não basta uma criolinha na área da administração." Questionou Alípio, erguendo o tom de voz, e passando a mão em seu cabelo, dizia: "Vai passar uma soda nesse pixaim!".</p>
 
-          <p>ㅤ"Alí, não diga isso, você sabe da história do nosso país! E você leu a carta de ontem, ele está passando fome lá no norte!". Alípio não esperou nem Olga terminar de falar e á jogou sobre o balcão do café, tirando sua cinta para descer o braço em Olga.</p>
+          <p>ㅤ"Alí, não diga isso, você leu a carta de ontem, ele está passando fome lá no norte!". Alípio não esperou nem Olga terminar de falar e á jogou sobre o balcão do café, tirando sua cinta para descer o braço em Olga.</p>
 
-          <p>ㅤ- Alí! Me solta!. Gritou Olga com desespero após ver Dante atrás da porta. - Dante não merece ver isso. Alípio sussurra pra Olga que ele só parou por respeito a Dante, e não por respeito a Olga.</p>
+          <p>ㅤ"Alí! Me solta!. Gritou Olga com desespero após ver Dante atrás da porta. - Dante não merece ver isso. Alípio sussurra pra Olga que ele só parou por respeito a Dante, e não por respeito a Olga".</p>
 
-          <p>ㅤ- Papai, deixa o Tio trabalhar aqui, por favor. Implorou pobre Dante, segurando suas lágrimas. E, como Alípio mimava aquele garoto, ele responde: - Claro Dan, e, Olga! Mande um telegrama à Esmeraldo, mas não quero ele em nosso palacete! Mande-o para aquele biongo do Cantagalo.</p>
+          <p>ㅤ"Papai, deixa o Tio trabalhar aqui, por favor. Implorou pobre Dante, segurando suas lágrimas. E, como Alípio mimava aquele garoto, ele responde: - Claro Dan, e, Olga! Mande um telegrama à Esmeraldo, mas não quero ele em nosso palacete! Mande-o para aquele biongo do Cantagalo".</p>
+
+          <p>ㅤ"Alí era um homem branco, racista e extremamente machista, que se gabava por suas origens europeias e achava que mulheres deviam ser submissas, acho que já deu pra perceber. Esmeraldo era o irmão mais novo de Olga, um rapaz negro, que morava com sua mãe no norte, mas com a morte dela tudo ficou mais dificil para ele".</p>
 
           <p><i>No dia seguinte, 22 de setembro, 1929</i></p>
 
@@ -165,7 +166,9 @@
 
           <p>ㅤDurante o escândalo de Olga, a própria pegou Ernesto escrevendo em seu misterioso caderno, e à caminho de casa, em sua limusine, Olga confronta o motorista:</p>
 
-          <p>ㅤ- Ernesto, hmm... O que você estava escrevendo e...</p>
+          <p>ㅤ"Ernesto, hmm... O que você estava escrevendo em seu caderno"</p>
+
+          <p>"Ah, provavelmente nada que vá te interassar, senhora" — O que sabemos que era mentira. Ernesto na verdade estava escrevendo os podres da família, que Olga era impaciente e ríspida. Que Alípio era um baita de um racista e que Dante já estava tendo sua mente corrompida com os pensamentos de seu pai e cenas de agressão contra a própria mãe.</p>
         </div>
 
         <div class="article">
